--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-    Filler text to start.
+    <header class="container header">
+        <div class="text header">Calculator Project</div>
+    </header>
+    <main class="container main">
+        <div class="container calculator">
+            Calculator Here
+        </div>
+    </main>
+    <footer class="container footer">
+        <div class="text footer">Copyright &copy; 2023 bdaniels8135</div>
+    </footer>
 </body>
 </html>
