Create basic button layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,40 @@
     </header>
     <main class="container main">
         <div class="container calculator">
-            Calculator Here
+            <div class="container calculator-display">
+                <div class="container calculator-sign-display">&minus;</div>
+                <div class="container calculator-main-display">0123456789</div>    
+            </div>
+            <div class="container calculator-row">
+                <button class="button calculator-button">C</button>
+                <button class="button calculator-button">&larr;</button>
+                <button class="button calculator-button">x<sup> y </sup></button>
+                <button class="button calculator-button">&divide;</button>
+            </div>
+            <div class="container calculator-row">
+                <button class="button calculator-button">7</button>
+                <button class="button calculator-button">8</button>
+                <button class="button calculator-button">9</button>
+                <button class="button calculator-button">&times;</button>
+            </div>
+            <div class="container calculator-row">
+                <button class="button calculator-button">4</button>
+                <button class="button calculator-button">5</button>
+                <button class="button calculator-button">6</button>
+                <button class="button calculator-button">&minus;</button>
+            </div>
+            <div class="container calculator-row">
+                <button class="button calculator-button">1</button>
+                <button class="button calculator-button">2</button>
+                <button class="button calculator-button">3</button>
+                <button class="button calculator-button">&plus;</button>
+            </div>
+            <div class="container calculator-row">
+                <button class="button calculator-button">0</button>
+                <button class="button calculator-button">&plus;/&minus;</button>
+                <button class="button calculator-button">&#8729;</button>
+                <button class="button calculator-button">&equals;</button>
+            </div>
         </div>
     </main>
     <footer class="container footer">
