Refine layout spacing and padding

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <main class="container main">
         <div class="container calculator">
             <div class="container calculator-display">
-                <div class="container calculator-sign-display">&minus;</div>
-                <div class="container calculator-main-display">0123456789</div>    
+                <div class="container calculator-sign-display">
+                    <div class="text calculator-sign-display">&minus;</div>
+                </div>
+                <div class="container calculator-main-display">
+                    <div class="text calculator-main-display">9.999999999</div>
+                </div>    
             </div>
             <div class="container calculator-row">
                 <button class="button calculator-button">C</button>
