--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
             <div class="container calculator-row">
                 <button class="button calculator-button clear" id="clear-button">C</button>
                 <button class="button calculator-button clear" id="backspace-button">&#9003;</button>
-                <button class="button calculator-button ops" id="power-button">x<sup> y </sup></button>
-                <button class="button calculator-button ops" id="divide-button">&divide;</button>
+                <button class="button calculator-button operation" id="power-button">x<sup> y </sup></button>
+                <button class="button calculator-button operation" id="divide-button">&divide;</button>
             </div>
             <div class="container calculator-row">
                 <button class="button calculator-button digit">7</button>
                 <button class="button calculator-button digit">8</button>
                 <button class="button calculator-button digit">9</button>
-                <button class="button calculator-button ops" id="times-button">&times;</button>
+                <button class="button calculator-button operation" id="times-button">&times;</button>
             </div>
             <div class="container calculator-row">
                 <button class="button calculator-button digit">4</button>
                 <button class="button calculator-button digit">5</button>
                 <button class="button calculator-button digit">6</button>
-                <button class="button calculator-button ops" id="minus-button">&minus;</button>
+                <button class="button calculator-button operation" id="minus-button">&minus;</button>
             </div>
             <div class="container calculator-row">
                 <button class="button calculator-button digit">1</button>
                 <button class="button calculator-button digit">2</button>
                 <button class="button calculator-button digit">3</button>
-                <button class="button calculator-button ops" id="plus-button">&plus;</button>
+                <button class="button calculator-button operation" id="plus-button">&plus;</button>
             </div>
             <div class="container calculator-row">
                 <button class="button calculator-button digit">0</button>
-                <button class="button calculator-button ops" id="negative-button">&plus;/&minus;</button>
-                <button class="button calculator-button ops" id="decimal-button">&#8729;</button>
+                <button class="button calculator-button negative" id="negative-button">&plus;/&minus;</button>
+                <button class="button calculator-button decimal" id="decimal-button">&#8729;</button>
                 <button class="button calculator-button equals" id="equals-button">&equals;</button>
             </div>
         </div>
