Erase placeholder text in displays

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="container calculator">
             <div class="container calculator-display">
                 <div class="container calculator-sign-display">
-                    <div class="text calculator-sign-display" id="sign-display">&minus;</div>
+                    <div class="text calculator-sign-display" id="sign-display"></div>
                 </div>
                 <div class="container calculator-main-display">
-                    <div class="text calculator-main-display" id="main-display">9.999999999</div>
+                    <div class="text calculator-main-display" id="main-display"></div>
                 </div>    
             </div>
             <div class="container calculator-row">
