Create click listeners and calculator memory

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                 <button class="button calculator-button digit">7</button>
                 <button class="button calculator-button digit">8</button>
                 <button class="button calculator-button digit">9</button>
-                <button class="button calculator-button operation" id="times-button">&times;</button>
+                <button class="button calculator-button operation" id="multiply-button">&times;</button>
             </div>
             <div class="container calculator-row">
                 <button class="button calculator-button digit">4</button>
                 <button class="button calculator-button digit">5</button>
                 <button class="button calculator-button digit">6</button>
-                <button class="button calculator-button operation" id="minus-button">&minus;</button>
+                <button class="button calculator-button operation" id="subtract-button">&minus;</button>
             </div>
             <div class="container calculator-row">
                 <button class="button calculator-button digit">1</button>
                 <button class="button calculator-button digit">2</button>
                 <button class="button calculator-button digit">3</button>
-                <button class="button calculator-button operation" id="plus-button">&plus;</button>
+                <button class="button calculator-button operation" id="add-button">&plus;</button>
             </div>
             <div class="container calculator-row">
                 <button class="button calculator-button digit">0</button>
